# Forge

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  build.gradle.kts  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/app/honguyen/forge/: ExampleInstrumentedTest.kt  ForgeSettingsRepositoryHiltTest.kt  ForgeTestRunner.kt
app/src/androidTest/java/app/honguyen/smartlive/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CheckGl.h  Log.h  forge_jni.cpp
app/src/main/cpp/effects/: GaussianBlur.h
app/src/main/cpp/egl/: EglContext.cpp  EglContext.h
app/src/main/cpp/engine/: Engine.cpp  Engine.h  RenderEngine.cpp  RenderEngine.h
app/src/main/cpp/gl/: CheckGl.h  FullScreenQuad.h  GpuTimer.h  ShaderProgram.h
app/src/main/cpp/ml/: LiteRtSmokeTest.cpp  Segmenter.cpp  Segmenter.h
app/src/main/cpp/passes/: CameraPass.cpp  CompositePass.cpp  CompositePass.h  EffectPass.cpp  EffectPass.h  PassthroughVert.h  PresentPass.cpp  PresentPass.h  RenderPass.h
app/src/main/cpp/resource/: FrameBuffer.cpp  FrameBuffer.h  FullScreenQuad.cpp  FullScreenQuad.h
app/src/main/cpp/resources/: FrameBuffer.cpp  FrameBuffer.h  FullScreenQuad.cpp  FullScreenQuad.h
app/src/main/cpp/shader/: CameraPass.cpp  CameraPass.h  EffectPass.cpp  EffectPass.h  PassthroughRenderer.cpp  PassthroughRenderer.h  PresentPass.cpp  PresentPass.h  RenderPass.h  ShaderProgram.cpp  ShaderProgram.h
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  themes.xml
config/detekt/: detekt.yml
feature-camera-preview/: build.gradle.kts
feature-camera-preview/src/main/: AndroidManifest.xml
feature-camera-preview/src/main/cpp/: CMakeLists.txt  Log.h  forge_jni.cpp
feature-camera-preview/src/main/cpp/effects/: GaussianBlur.h
feature-camera-preview/src/main/cpp/egl/: EglContext.cpp  EglContext.h
feature-camera-preview/src/main/cpp/engine/: RenderEngine.cpp  RenderEngine.h
feature-camera-preview/src/main/cpp/gl/: GpuTimer.cpp  GpuTimer.h  ShaderProgram.cpp
feature-camera-preview/src/main/cpp/ml/: Segmenter.h
feature-camera-preview/src/main/cpp/passes/: CameraPass.h  CompositePass.cpp  EffectPass.h  RenderPass.h
feature-camera-preview/src/main/cpp/resources/: FrameBuffer.cpp  FullScreenQuad.cpp
feature-camera-preview/src/main/cpp/trace/: Trace.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib-compose-utils/: build.gradle.kts
lib-coroutines/: build.gradle.kts
lib-data/: build.gradle.kts
lib-datastore/: build.gradle.kts
lib-datastore/src/main/proto/: settings.proto
lib-design-system/: build.gradle.kts
lib-testing/: build.gradle.kts
(+92 files in other folders)
